--- a/sec/einfuehrung.tex
+++ b/sec/einfuehrung.tex
@@ -11,5 +11,5 @@ Somit wird die Frage aufgeworfen, ob sich eine Klasse von Graphen, nachfolgend C
 Diese Frage wird im Folgenden beantwortet und eine Definition der Menge der CR-Graphen aufgestellt werden.
 
 Zunächst werden Graph-Isomorphie und Color Refinement genauer vorgestellt und eine formale Definition für die Anforderungen an CR-Graphen aufgestellt.
-Wie sich herausstellen wird, lassen sich die erforderlichen Eigenschaften an CR-Graphen in eine lokale Struktur und eine globale Struktur einordnen, welche in den folgenden Kapiteln detailliert definiert werden.
+Wie sich herausstellen wird, lassen sich die erforderlichen Eigenschaften von CR-Graphen in eine lokale Struktur und eine globale Struktur einordnen, welche in den folgenden Kapiteln detailliert definiert werden.
 Die Ergebnisse bezüglich hinreichender Bedingungen zur Erkennung von CR-Graphen sowie Laufzeit und Fazit werden im abschließenden Kapitel behandelt.
