--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -21,10 +21,10 @@ Die vorgestellten lokalen und globalen Eigenschaften von CR-Graphen reichen wie 
 \end{Theorem}
 
 \emph{Beweis:} Die Äquivalenz der Aussagen wird gezeigt, indem gezeigt wird, dass gilt: $(a)\rightarrow (b)\rightarrow (c)\rightarrow (a)$.
-Die bisher erlangten Erkenntnisse ermöglichen es bereits einen großen Teil dieser Aussage zu bestätigen. Somit wurde in den Lemmata \ref{lemma:lokal} und \ref{lemma:global1} gezeigt, dass $(a)\rightarrow (b)$ gilt. Ebenfalls wurde in Lemma \ref{lemma:global2} gezeigt, dass $(b)\rightarrow (c)$ gilt. Es bleibt also nur noch zu zeigen, dass auch $(c)\rightarrow (a)$ gültig ist.
+Die bisher erlangten Erkenntnisse ermöglichen es bereits einen großen Teil dieser Aussage zu bestätigen. Somit wurde in den Lemmata \ref{lemma:lokal} und \ref{lemma:global1} gezeigt, dass $(a)\rightarrow (b)$ gilt. Ebenfalls wurde in Lemma \ref{lemma:global2} gezeigt, dass $(b)\rightarrow (c)$ gilt. Es bleibt also nur noch zu zeigen, dass auch $(c)\rightarrow (a)$ gültig ist.\\
 
 Sei dazu $G$ ein Graph, welcher die Bedingungen \emph{A}, \emph{B}, \emph{G} und \emph{H} erfüllt und $H$ ein durch Color Refinement nicht von $G$ unterscheidbarer Graph, dann ist zu zeigen, dass $G$ und $H$ isomorph sind.
-Im Folgenden sei $C^s$, welche zur stabilen Partition $\mathcal{P}^s$ von der \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} $G+H$ gehört.
+Im Folgenden sei $C^s$ eine Knotenfärbung, welche zur stabilen Partition $\mathcal{P}^s$ von der \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} $G+H$ gehört.
 Aus Gleichung \ref{eq:2} folgt, dass es eine Abbildung $f:\mathcal{P}_G\rightarrow \mathcal{P}_H$ gibt, welche die Zellen der stabilen Partition von $G$ auf die der stabilen Partition von $H$ so abbildet, dass diese die selbe Farbe und Kardinalität besitzen.
 
 \begin{Lemma}
@@ -38,7 +38,7 @@ Aus Gleichung \ref{eq:2} folgt, dass es eine Abbildung $f:\mathcal{P}_G\rightarr
 
 Beweis für Lemma \ref{lemma:zell_isomorphismus} (a):
 Sowohl $X$ als auch $f(X)$ sind reguläre Graphen, da diese Zellen einer stabilen Partition sind.
-Da beide Zellen durch die Konstruktion von $f$ die selbe Farbe besitzen und somit in der stabilen Partition $\mathcal{P}^s$ von $G+H$ in der selben Zelle liegen, haben die Graphen $G[X]$ und $H[f(X)]$ denselben Grad.
+Da beide Zellen durch die Konstruktion von $f$ dieselbe Farbe besitzen und somit in der stabilen Partition $\mathcal{P}^s$ von $G+H$ in derselben Zelle liegen, haben die Graphen $G[X]$ und $H[f(X)]$ denselben Grad.
 Aus dieser Eigenschaft und Bedingung \emph{A} folgt somit, dass $G[X]$ ein Unigraph ist, dessen Isomorphieeigenschaften durch seine Gradsequenzen vollständig definiert ist und daraus Behauptung (a) folgt.
 
 Behauptung (b) folgt nach derselben Begründung aus Bedingung \emph{B}.\\
@@ -47,20 +47,20 @@ Da die in Lemma \ref{lemma:zell_isomorphismus} festgestellte Isomorphie zwischen
 Siehe dazu auch Kapitel \ref{sec/anwendungsbeispiel}, wo beschrieben wird, dass für den vorgestellten Graphen, welcher kein CR-Graph ist, die Bedingungen \emph{A} und \emph{B} dennoch erfüllt sind.
 Lemma \ref{lemma:zell_isomorphismus} lässt darauf schließen, dass $\phi (X)=f(X)$ bereits ein gültiger Isomorphismus zum Abbilden der Subgraphen von Zellen aufeinander ist.
 
-Die lokalen Eigenschaften von CR-Graphen helfen also dabei diesen Isomorphismus teilweise aufzustellen, dieser muss allerdings auch Zellübergreifend korrekt definiert sein, weshalb die globalen Eigenschaften ebenfalls benötigt werden.
+Die lokalen Eigenschaften von CR-Graphen helfen also dabei diesen Isomorphismus teilweise aufzustellen, dieser muss allerdings auch Zellübergreifend korrekt definiert sein, weshalb die globalen Eigenschaften ebenfalls erfüllt sein müssen.
 Jede anisotrope Komponente $A$ des Zellgraphen $C(G)$ kann nach Bedingung \emph{H} maximal eine heterogene Zelle $R_A$ enthalten.
 Sollte diese für eine Komponente nicht existieren, so sei $R_A$ eine beliebige Zelle minimaler Kardinalität in $A$.
 Nach (a) kann $\phi$ für die Zelle $R_A$ jeder anisotroper Komponente ein beliebiger Isomorphismus von $G[R_A]$ nach $H[f(R_A)]$ sein.
 Dieser Isomorphismus wird dann auf die anderen Zellen in $A$ übertragen, was im Folgenden genauer beschrieben wird.
 Da $A$ nach Bedingung \emph{G} ein Baum ist, kann dieser von der Zelle $R_A$ gewurzelt werden, sodass der Baum $A_R$ entsteht.
-Angenommen $\phi$ sei bereits für die Zelle $X$ definiert, so kann dieses über die Kante $G[X,Y]$ auf die Zelle übertragen werden, da nach der Monotonievoraussetzung von Bedingung \emph{G} und der Wahl von $R_A$ gilt, dass $|X|\leq |Y|$.
+Angenommen $\phi$ sei bereits für die Zelle $X$ definiert, so kann dieses über die Kante $G[X,Y]$ auf die Zelle $Y$ übertragen werden, da nach der Monotonievoraussetzung von Bedingung \emph{G} und der Wahl von $R_A$ gilt, dass $|X|\leq |Y|$.
 Für die Zelle $Y$ muss $\phi$ dann nur noch so gewählt werden, dass dieses einen Isomorphismus von $G[X,Y]$ nach $H[f(X),f(Y)]$ darstellt, was wegen (b) und der Tatsache, dass alle Knoten von $Y$ den Grad 1 im bipartiten Graphen $G[X,Y]$ oder dessen bipartiten Komplement hat, was ebenfalls für $f(Y)$ gilt, möglich ist.\\
 
 Da $\phi$ durch seine Konstruktion ein Isomorphismus zwischen $G[X]$ und $H[f(X)]$ sowie zwischen $G[X,Y]$ und $H[f(X),f(Y)]$ ist, ergibt sich, dass $\phi$ ebenfalls ein Isomorphismus von $G$ zu $H$ ist.
 
 \subsection{Anwendungsbeispiel}
 \label{sec/anwendungsbeispiel}
-Um die Verwendung der unterschiedlichen Bedingungen zu veranschaulichen wird das aus Kapitel \ref{sec/cr} bekannte Beispiel, wie in Abbildung \ref{fig:anwendungsbeispiel} erkennbar, um zwei Knoten erweitert und im Folgenden auf die Bedingungen überprüft.
+Um die Verwendung der unterschiedlichen Bedingungen zu veranschaulichen wird das aus Kapitel \ref{sec/cr} bekannte Beispiel, wie in Abbildung \ref{fig:anwendungsbeispiel} erkennbar, um zwei Knoten erweitert und im Folgenden auf die vorgestellten Bedingungen überprüft.
 Im Bild sind außerdem die zu der stabilen Partition gehörenden Knotenfärbungen eingezeichnet worden.
 Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blauen Knoten geformte Partition und deren Zellen $\mathcal{B}$, die der grünen Knoten $\mathcal{G}$ und die der roten Knoten $\mathcal{R}$ genannt.
 
@@ -181,7 +181,7 @@ Außerdem ist kein anisotroper Zyklus vorhanden, weshalb Voraussetzung \emph{E} 
 Somit ist diese Bedingung nicht erfüllt und es kann aus \emph{A-F} gefolgert werden, dass der Graph kein CR-Graph ist.\\
 
 Der Vollständigkeit halber werden im Folgenden außerdem Bedingungen \emph{G} und \emph{H} überprüft werden, um zu zeigen, dass auch das Überprüfen der Bedingungen \emph{A,B,G} und \emph{H} ausreicht, um den Graphen als nicht-CR-Graphen zu entlarven.
-Dabei gibt es im vorgestellten Graphen drei unterschiedliche anisotrope Komponenten, welche aus mehr als einem Knoten bestehen, nämlich $\{\mathcal{B},\mathcal{G}\}$, $\{\mathcal{G},\mathcal{R}\}$ und $\{\mathcal{B},\mathcal{G},\mathcal{R}\}$.
+Dabei gibt es im vorgestellten Graphen drei unterschiedliche anisotrope Komponenten, welche aus mehr als einem Knoten bestehen, nämlich $\{\mathcal{B},\mathcal{G}\}$, $\{\mathcal{G},\mathcal{R}\}$ und $\{\mathcal{B},\mathcal{G},\mathcal{R}\}$.\\
 
 \emph{Bedingung G:} Eine anisotrope Komponente, welche die Monotonieeigenschaft nicht erfüllt, müsste mindestens drei Zellen enthalten, weshalb nur die Komponente $\{\mathcal{B},\mathcal{G},\mathcal{R}\}$ infrage käme.
 Diese erfüllt diese Eigenschaft allerdings, egal ob $\mathcal{B}$ oder $\mathcal{G}$ als Wurzel definiert werden.
@@ -202,7 +202,7 @@ Nach \cite{CARDON198285} lässt sich die stabile Partition eines Graphen $G$ in 
 \emph{Beweis:} Zunächst wird die stabile Partition $\mathcal{P}_G=\{X_1,X_2,...,X_k\}$ berechnet, was wie eingangs erwähnt die Laufzeit $\mathcal{O}((n+m)\log n)$ benötigt.
 Außerdem wird $C^*(G)$ definiert als der Zellgraph, bei dem sämtliche leeren Kanten, also solche bei denen keine Verbindungen zwischen den Elementen der beiden Endpunkte besteht, entfernt wurden.
 
-Für die Elemente $X_i\in C^*(G)$ werden die Adjazenzlisten gebildet, indem die Adjazenzliste eines beliebigen Knoten $u\in X_i$ durchlaufen wird und sämtliche Zellen aufgelistet werden, welche einen zu $u$ adjazenten Knoten enthalten.
+Für alle Zellen $X_i\in C^*(G)$ werden die Adjazenzlisten gebildet, indem die Adjazenzliste eines beliebigen Knoten $u\in X_i$ durchlaufen wird und sämtliche Zellen aufgelistet werden, welche einen zu $u$ adjazenten Knoten enthalten.
 Die dadurch gewonnenen Informationen sind identisch für alle Knoten aus $X_i$, da diese alle gleichartige Nachbarschaften besitzen, weshalb es ausreicht die Operation für einen beliebigen Knoten durchzuführen.
 Durch die Informationen aus der Adjazenzliste lässt sich der Grad der Knoten innerhalb der Zellen bestimmen und somit leicht Bedingung \emph{A} durch die in Lemma \ref{lemma:lokal_regulaer} vorgestellten Bedingungen für jeden Subgraphen $G[X_i]$ überprüfen.
 
@@ -213,7 +213,7 @@ Dadurch, dass die Werte $|X_i|$, $|X_j|$ und $d_{ij}$ nun bekannt sind, lässt s
 Da alle Zellen des Zellgraphen $C^*(G)$ im schlimmsten Falle unterschiedliche Farben haben, gibt es maximal $n$ Zellen.
 Mit dem beschriebenen Verfahren können die Bedingungen \emph{A} und \emph{B} somit in der Zeit $\mathcal{O}(n)$ überprüft werden.
 
-Zum Überprüfen von Bedingung \emph{H} wird eine Breitensuche auf dem Zellgraphen $C^*(G)$ durchgeführt, welche alle anisotropen Komponenten findet und gleichzeitig überprüft, ob diese eine Baumstruktur aufweisen und nur eine anisotrope Komponente enthält.
+Zum Überprüfen von Bedingung \emph{H} wird eine Breitensuche auf dem Zellgraphen $C^*(G)$ durchgeführt, welche alle anisotropen Komponenten findet und gleichzeitig überprüft, ob diese eine Baumstruktur aufweisen und nur eine heterogene Zelle enthält.
 
 Wird diese Breitensuche nun von der Zelle minimaler Kardinalität für jede Komponente wiederholt, so lässt sich die in Bedingung \emph{G} beschriebene Monotonieeigenschaft für jede Kante überprüfen.
 
