Hinzufügen von qed

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -37,6 +37,7 @@
 \usepackage{enumitem}										% Erweiterte Funktionen der enumerate Umgebung
 \usepackage[autostyle=true,german=quotes]{csquotes}			% Wird für den Befehl \enquote benötigt
 \usepackage{tikz}											% Ermöglicht das Zeichnen von Grafiken
+\usepackage{amssymb}										% Einfügen von zusätzlichen Symbolen wie \square
 
 \captionsetup{farskip=10pt,topadjust=0pt,captionskip=10pt,nearskip=0pt,margin=10pt}
 
