--- a/sec/struktur_lokal.tex
+++ b/sec/struktur_lokal.tex
@@ -99,4 +99,4 @@ Diese Ergebnisse lassen sich für den Beweis von Lemma \ref{lemma:lokal} nutzen,
 
 \emph{(A)} Sei $G[X]$ ein Graph, dessen Struktur nicht in Lemma \ref{lemma:lokal} \emph{(A)} aufgelistet wird, so ist dieser wie in Lemma \ref{lemma:lokal_regulaer} dargestellt, kein Unigraph. Somit ist es möglich $G[X]$ innerhalb von $G$ durch einen nicht-isomorphen Graphen mit gleichen Parametern zu ersetzen. Der so entstandene Graph $H$ ist nicht isomorph zum Ursprungsgraphen $G$, da die Subgraphen $G[X]$ und $H[X]$ nicht isomorph sind. Teil (a) von Lemma \ref{lemma:lokal_nicht_unterscheidbar} hingegen zeigt, dass Gleichung \ref{eq:2} für beliebige $i$ erfüllt ist und das Color Refinement die beiden Graphen somit nicht unterscheiden kann. Aus dieser Aussage folgt, dass der Graph $G$ nicht zu der Klasse der CR-Graphen gehört. Durch Kontraposition folgt nun, dass ein CR-Graph die in Lemma \ref{lemma:lokal} \emph{(A)} genannten Eigenschaften in jedem Fall erfüllt.
 
-\emph{(B)} Diese Aussage lässt sich unter Zuhilfenahme von Lemma \ref{lemma:lokal_bipartit} und Lemma \ref{lemma:lokal_nicht_unterscheidbar} (ii) sehr ähnlich zu \emph{(A)} begründen.
+\emph{(B)} Diese Aussage lässt sich unter Zuhilfenahme von Lemma \ref{lemma:lokal_bipartit} und Lemma \ref{lemma:lokal_nicht_unterscheidbar} (ii) sehr ähnlich zu \emph{(A)} begründen.$\hfill\square$
