Verbessern der Seitenformatierung

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -135,6 +135,7 @@ Technische Universität Dortmund
 %------------------------------------------------
 \glsaddall
 \printnoidxglossaries
+\newpage
 
 %------------------------------------------------
 % Kapitel
