--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -27,6 +27,8 @@ Sei dazu $G$ ein Graph, welcher die Bedingungen \emph{A}, \emph{B}, \emph{G} und
 Im Folgenden sei $C^s$ eine Knotenfärbung, welche zur stabilen Partition $\mathcal{P}^s$ von der \glslink{disjunkte_vereinigung}{disjunkten Vereinigung} $G+H$ gehört.
 Aus Gleichung \ref{eq:2} folgt, dass es eine Abbildung $f:\mathcal{P}_G\rightarrow \mathcal{P}_H$ gibt, welche die Zellen der stabilen Partition von $G$ auf die der stabilen Partition von $H$ so abbildet, dass diese die selbe Farbe und Kardinalität besitzen.
 
+\newpage
+
 \begin{Lemma}
 	Die Abbildung $f$ stellt einen Isomorphismus von $C(G)$ nach $C(H)$ dar, sofern für beliebige $X,Y\in G$ gilt:
 	\begin{enumerate}[label=(\alph*)]
@@ -62,7 +64,7 @@ Da $\phi$ durch seine Konstruktion ein Isomorphismus zwischen $G[X]$ und $H[f(X)
 \label{sec/anwendungsbeispiel}
 Um die Verwendung der unterschiedlichen Bedingungen zu veranschaulichen wird das aus Kapitel \ref{sec/cr} bekannte Beispiel, wie in Abbildung \ref{fig:anwendungsbeispiel} erkennbar, um zwei Knoten erweitert und im Folgenden auf die vorgestellten Bedingungen überprüft.
 Im Bild sind außerdem die zu der stabilen Partition gehörenden Knotenfärbungen eingezeichnet worden.
-Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blauen Knoten geformte Partition und deren Zellen $\mathcal{B}$, die der grünen Knoten $\mathcal{G}$ und die der roten Knoten $\mathcal{R}$ genannt.
+Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blauen Knoten geformte Partition und deren Zellen $\mathcal{B}$, die der grünen Knoten $\mathcal{G}$ und die der roten Knoten $\mathcal{R}$ genannt.\\
 
 \begin{figure}[t]
 	\centering
@@ -168,7 +170,7 @@ Um nachfolgend geeignet auf die globalen Eigenschaften des vorgestellten Graphen
 \end{figure}
 
 \emph{Bedingung C:} Da der vorgestellte Graph nur die heterogene Zelle $\mathcal{R}$ enthält, kann es keinen anisotropen Pfad zwischen zwei heterogenen Zellen geben.
-Diese Voraussetzung ist also erfüllt.
+Diese Voraussetzung ist also erfüllt.\\
 
 \emph{Bedingung D:} Der Graph enthält auch keinen gleichmäßigen, anisotropen Zyklus, da die Kante $\{\mathcal{B},\mathcal{R}\}$ isotrop ist.
 Somit ist diese Bedingung ebenso erfüllt.
