--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -13,7 +13,7 @@ Siehe \cite{Goldreich1991}.
 \subsection{Color Refinement}
 \label{sec/cr}
 Der Color Refinement Algorithmus stellt eine Heuristik dar, mit der in polynomieller Zeit festgestellt werden kann, dass zwei Graphen nicht isomorph sind.
-Der Algorithmus geht wie folgt vor.
+Der Algorithmus geht wie folgt vor.\\
 \begin{enumerate}
 	\item Sämtliche Knoten des Graphen werden in der selben Farbe gefärbt.
 	\item Die Knotenfärbungen werden verfeinert, indem überprüft wird, ob zwei Knoten gleicher Farbe unterschiedliche \glspl{nachbarschaft} mit Berücksichtigung der Farbe besitzen.
