Entfernen der Knotennummerierung innerhalb der Beispiele

--- a/sec/ergebnis.tex
+++ b/sec/ergebnis.tex
@@ -70,14 +70,14 @@ Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blau
 	\centering
 	\begin{tikzpicture}
 		\begin{scope}
-			\node[main node] (1) [fill=green!30]{$1$};
-			\node[main node] (2) [fill=red!30,below left = 0.8cm and 1.4cm of 1]  {$2$};
-			\node[main node] (6) [fill=red!30,below right = 0.8cm and 1.4cm of 1] {$6$};
-			\node[main node] (3) [fill=red!30,below = 1.4cm of 2] {$3$};
-			\node[main node] (5) [fill=red!30,below = 1.4cm of 6] {$5$};
-			\node[main node] (4) [fill=green!30,below right = 0.8cm and 1.4cm of 3] {$4$};
-			\node[main node] (7) [above = 1.4cm of 1] {$7$};
-			\node[main node] (8) [below = 1.4cm of 4] {$8$};
+			\node[main node] (1) [fill=green!30]{};
+			\node[main node] (2) [fill=red!30,below left = 0.8cm and 1.4cm of 1]  {};
+			\node[main node] (6) [fill=red!30,below right = 0.8cm and 1.4cm of 1] {};
+			\node[main node] (3) [fill=red!30,below = 1.4cm of 2] {};
+			\node[main node] (5) [fill=red!30,below = 1.4cm of 6] {};
+			\node[main node] (4) [fill=green!30,below right = 0.8cm and 1.4cm of 3] {};
+			\node[main node] (7) [above = 1.4cm of 1] {};
+			\node[main node] (8) [below = 1.4cm of 4] {};
 			
 			\path[draw,thick]
 			(1) edge node {} (2)
@@ -100,14 +100,14 @@ Um die Zuordnung zu den Partitionen im Text zu erleichtern wird die von den blau
 		\node[main node] (R1) [fill=red!30,left = 0cm of R] {};
 		
 		\begin{scope}[xshift=8cm]
-			\node[main node] (1) [fill=green!30]{$1$};
-			\node[main node] (2) [fill=red!30,below left = 0.8cm and 1.4cm of 1]  {$2$};
-			\node[main node] (6) [fill=red!30,below right = 0.8cm and 1.4cm of 1] {$6$};
-			\node[main node] (3) [fill=red!30,below = 1.4cm of 2] {$3$};
-			\node[main node] (5) [fill=red!30,below = 1.4cm of 6] {$5$};
-			\node[main node] (4) [fill=green!30,below right = 0.8cm and 1.4cm of 3] {$4$};
-			\node[main node] (7) [above = 1.4cm of 1] {$7$};
-			\node[main node] (8) [below = 1.4cm of 4] {$8$};
+			\node[main node] (1) [fill=green!30]{};
+			\node[main node] (2) [fill=red!30,below left = 0.8cm and 1.4cm of 1]  {};
+			\node[main node] (6) [fill=red!30,below right = 0.8cm and 1.4cm of 1] {};
+			\node[main node] (3) [fill=red!30,below = 1.4cm of 2] {};
+			\node[main node] (5) [fill=red!30,below = 1.4cm of 6] {};
+			\node[main node] (4) [fill=green!30,below right = 0.8cm and 1.4cm of 3] {};
+			\node[main node] (7) [above = 1.4cm of 1] {};
+			\node[main node] (8) [below = 1.4cm of 4] {};
 			
 			\path[draw,thick]
 			(1) edge node {} (2)
