--- a/sec/gi_cr.tex
+++ b/sec/gi_cr.tex
@@ -47,12 +47,12 @@ Somit lässt sich wie in Korollar \ref{kor:cr-graph} formuliert die Äquivalenz 
 	\centering
 	\begin{tikzpicture}
 		\begin{scope}
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below left = 0.8cm and 1.4cm of 1]  {$2$};
-			\node[main node] (6) [below right = 0.8cm and 1.4cm of 1] {$6$};
-			\node[main node] (3) [below = 1.4cm of 2] {$3$};
-			\node[main node] (5) [below = 1.4cm of 6] {$5$};
-			\node[main node] (4) [below right = 0.8cm and 1.4cm of 3] {$4$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below left = 0.8cm and 1.4cm of 1]  {};
+			\node[main node] (6) [below right = 0.8cm and 1.4cm of 1] {};
+			\node[main node] (3) [below = 1.4cm of 2] {};
+			\node[main node] (5) [below = 1.4cm of 6] {};
+			\node[main node] (4) [below right = 0.8cm and 1.4cm of 3] {};
 			
 			\path[draw,thick]
 			(1) edge node {} (2)
@@ -66,12 +66,12 @@ Somit lässt sich wie in Korollar \ref{kor:cr-graph} formuliert die Äquivalenz 
 		\node [below right = 0.4cm and 1.3cm of 6] {\huge $\not\simeq$};
 		
 		\begin{scope}[xshift=8cm]
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below left = 0.8cm and 1.4cm of 1]  {$2$};
-			\node[main node] (6) [below right = 0.8cm and 1.4cm of 1] {$6$};
-			\node[main node] (3) [below = 1.4cm of 2] {$3$};
-			\node[main node] (5) [below = 1.4cm of 6] {$5$};
-			\node[main node] (4) [below right = 0.8cm and 1.4cm of 3] {$4$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below left = 0.8cm and 1.4cm of 1]  {};
+			\node[main node] (6) [below right = 0.8cm and 1.4cm of 1] {};
+			\node[main node] (3) [below = 1.4cm of 2] {};
+			\node[main node] (5) [below = 1.4cm of 6] {};
+			\node[main node] (4) [below right = 0.8cm and 1.4cm of 3] {};
 			
 			\path[draw,thick]
 			(1) edge node {} (2)
