--- a/sec/struktur_global.tex
+++ b/sec/struktur_global.tex
@@ -82,12 +82,12 @@ Dabei ist der durch die gestrichelten Linien dargestellte Pfad im Ausgangsgraphe
 	\centering
 	\begin{tikzpicture}
 		\begin{scope}
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below left = 0.5cm and 0.85 of 1] {$2$};
-			\node[main node] (3) [below = 1cm of 1] {$3$};
-			\node[main node] (4) [right = 3cm of 1] {$4$};
-			\node[main node] (5) [right = 3cm of 2] {$5$};
-			\node[main node] (6) [right = 3cm of 3] {$6$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below left = 0.5cm and 0.85 of 1] {};
+			\node[main node] (3) [below = 1cm of 1] {};
+			\node[main node] (4) [right = 3cm of 1] {};
+			\node[main node] (5) [right = 3cm of 2] {};
+			\node[main node] (6) [right = 3cm of 3] {};
 
 			\path[draw,very thick]
 			(1) edge node {} (3)
@@ -107,12 +107,12 @@ Dabei ist der durch die gestrichelten Linien dargestellte Pfad im Ausgangsgraphe
 		\end{scope}
 		
 		\begin{scope}[xshift=9cm]
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below left = 0.5cm and 0.85 of 1] {$2$};
-			\node[main node] (3) [below = 1cm of 1] {$3$};
-			\node[main node] (4) [right = 3cm of 1] {$4$};
-			\node[main node] (5) [right = 3cm of 2] {$5$};
-			\node[main node] (6) [right = 3cm of 3] {$6$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below left = 0.5cm and 0.85 of 1] {};
+			\node[main node] (3) [below = 1cm of 1] {};
+			\node[main node] (4) [right = 3cm of 1] {};
+			\node[main node] (5) [right = 3cm of 2] {};
+			\node[main node] (6) [right = 3cm of 3] {};
 			
 			\path[draw,very thick]
 			(1) edge node {} (3)
@@ -172,19 +172,19 @@ Die hier definierten Symbole werden in Abbildung \ref{fig:hypergraph1} beispielh
 	\centering
 	\begin{tikzpicture}
 		\begin{scope}
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below = 0.5cm of 1] {$2$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below = 0.5cm of 1] {};
 			
-			\node[main node] (3) [left = 3cm of 1] {$3$};
-			\node[main node] (4) [above = 0.5cm of 3] {$4$};
-			\node[main node] (5) [above = 0.5cm of 4] {$5$};
-			\node[main node] (6) [below = 0.5cm of 3] {$6$};
-			\node[main node] (7) [below = 0.5cm of 6] {$7$};
-			\node[main node] (8) [below = 0.5cm of 7] {$8$};
+			\node[main node] (3) [left = 3cm of 1] {};
+			\node[main node] (4) [above = 0.5cm of 3] {};
+			\node[main node] (5) [above = 0.5cm of 4] {};
+			\node[main node] (6) [below = 0.5cm of 3] {};
+			\node[main node] (7) [below = 0.5cm of 6] {};
+			\node[main node] (8) [below = 0.5cm of 7] {};
 			
-			\node[main node] (9) [above left = 0.2cm and 3cm of 3] {$9$};
-			\node[main node] (10) [below = 0.5cm of 9] {$10$};
-			\node[main node] (11) [below = 0.5cm of 10] {$11$};
+			\node[main node] (9) [above left = 0.2cm and 3cm of 3] {};
+			\node[main node] (10) [below = 0.5cm of 9] {};
+			\node[main node] (11) [below = 0.5cm of 10] {};
 
 			\path[draw,thick]
 			(2) edge node {} (6)
@@ -292,19 +292,19 @@ Es ist erkennbar, dass einige der Mengen von $\{Y_x\}$ vollständig in einer Men
 	\centering
 	\begin{tikzpicture}
 		\begin{scope}
-			\node[main node] (1) {$1$};
-			\node[main node] (2) [below = 0.5cm of 1] {$2$};
+			\node[main node] (1) {};
+			\node[main node] (2) [below = 0.5cm of 1] {};
 			
-			\node[main node] (3) [left = 3cm of 1] {$3$};
-			\node[main node] (4) [above = 0.5cm of 3] {$4$};
-			\node[main node] (5) [above = 0.5cm of 4] {$5$};
-			\node[main node] (6) [below = 0.5cm of 3] {$6$};
-			\node[main node] (7) [below = 0.5cm of 6] {$7$};
-			\node[main node] (8) [below = 0.5cm of 7] {$8$};
+			\node[main node] (3) [left = 3cm of 1] {};
+			\node[main node] (4) [above = 0.5cm of 3] {};
+			\node[main node] (5) [above = 0.5cm of 4] {};
+			\node[main node] (6) [below = 0.5cm of 3] {};
+			\node[main node] (7) [below = 0.5cm of 6] {};
+			\node[main node] (8) [below = 0.5cm of 7] {};
 			
-			\node[main node] (9) [above left = 0.2cm and 3cm of 3] {$9$};
-			\node[main node] (10) [below = 0.5cm of 9] {$10$};
-			\node[main node] (11) [below = 0.5cm of 10] {$11$};
+			\node[main node] (9) [above left = 0.2cm and 3cm of 3] {};
+			\node[main node] (10) [below = 0.5cm of 9] {};
+			\node[main node] (11) [below = 0.5cm of 10] {};
 			
 			\path[draw,thick,red]
 			(1) edge node {} (5)
