Entfernen der farbigen Boxen um Hyperlinks

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -26,7 +26,7 @@
 \usepackage{subfig}                                         % subfigures
 \usepackage{url}                                            % \url{}-Kommando
 \usepackage{fancyhdr,float}                                 % Kopf-/Fußzeilen
-\usepackage[pdftex,pdfpagelabels]{hyperref}                 % Hyperlinks im PDF
+\usepackage[pdftex,pdfpagelabels,hidelinks]{hyperref}       % Hyperlinks im PDF
 \usepackage[round]{natbib}                                  % Literaturverzeichnis
 \usepackage{doi}                                            % DOIs
 \usepackage[section,boxed]{algorithm}                       % Floating-Umgebung für Algorithmen
