--- a/literatur.bib
+++ b/literatur.bib
@@ -1,136 +1,114 @@
-@Inbook{Grohe2014,
-	author="Grohe, Martin
+@inbook{Grohe2014,
+	author={Grohe, Martin
 	and Kersting, Kristian
 	and Mladenov, Martin
-	and Selman, Erkal",
-	editor="Schulz, Andreas S.
-	and Wagner, Dorothea",
-	title="Dimension Reduction via Colour Refinement",
-	bookTitle="Algorithms - ESA 2014: 22th Annual European Symposium, Wroclaw, Poland, September 8-10, 2014. Proceedings",
-	year="2014",
-	publisher="Springer Berlin Heidelberg",
-	address="Berlin, Heidelberg",
-	pages="505--516",
-	isbn="978-3-662-44777-2",
-	doi="10.1007/978-3-662-44777-2_42",
-	url="https://doi.org/10.1007/978-3-662-44777-2_42"
+	and Selman, Erkal},
+	title={{Dimension Reduction via Colour Refinement}},
+	year={2014},
+	booktitle={{Algorithms - ESA 2014: 22th Annual European Symposium, Wroclaw, Poland, September 8-10, 2014. Proceedings}},
+	publisher={Springer Berlin Heidelberg},
+	pages={505-516},
+	doi={10.1007/978-3-662-44777-2_42}
 }
 
-@article{shervashidze2011weisfeiler,
-	title={Weisfeiler-lehman graph kernels},
-	author={Shervashidze, Nino and Schweitzer, Pascal and Leeuwen, Erik Jan van and Mehlhorn, Kurt and Borgwardt, Karsten M},
-	journal={Journal of Machine Learning Research},
-	volume={12},
-	number={Sep},
-	pages={2539--2561},
-	year={2011}
+@inbook{Arvind2015,
+	author={Arvind, V.
+	and K{\"o}bler, Johannes
+	and Rattan, Gaurav
+	and Verbitsky, Oleg},
+	title={{On the Power of Color Refinement}},
+	year={2015},
+	booktitle={{Fundamentals of Computation Theory: 20th International Symposium}},
+	publisher={Springer International Publishing},
+	pages={339-350},
+	doi={10.1007/978-3-319-22177-9_26}
 }
 
 @inproceedings{kersting2014power,
-	title={Power Iterated Color Refinement.},
-	author={Kersting, Kristian and Mladenov, Martin and Garnett, Roman and Grohe, Martin},
+	author={Kersting, Kristian 
+	and Mladenov, Martin 
+	and Garnett, Roman 
+	and Grohe, Martin},
+	title={{Power Iterated Color Refinement}},
 	year={2014},
 	pages={1904-1910},
 	booktitle={Prooceedings of the Twenty-Eigth AAAI Conference on Artificial Intelligence},
 	publisher={AAAI Press}
 }
 
+@article{shervashidze2011weisfeiler,
+	author={Shervashidze, Nino 
+	and Schweitzer, Pascal 
+	and Leeuwen, Erik Jan van 
+	and Mehlhorn, Kurt 
+	and Borgwardt, Karsten M},
+	title={{Weisfeiler-Lehman Graph Kernels}},
+	year={2011},
+	journal={Journal of Machine Learning Research},
+	pages={2539-2561}
+}
+
 @article{MCKAY201494,
-	title = "Practical graph isomorphism, II",
-	journal = "Journal of Symbolic Computation",
-	volume = "60",
-	number = "Supplement C",
-	pages = "94 - 112",
-	year = "2014",
-	issn = "0747-7171",
-	doi = "https://doi.org/10.1016/j.jsc.2013.09.003",
-	url = "http://www.sciencedirect.com/science/article/pii/S0747717113001193",
-	author = "Brendan D. McKay and Adolfo Piperno",
-	keywords = "Graph isomorphism, Canonical labelling, Nauty, Traces, Partition refinement"
+	author = {McKay, Brendan D. 
+	and Piperno, Adolfo},
+	title = {{Practical graph isomorphism, II}},
+	year = {2014},
+	journal = {Journal of Symbolic Computation},
+	pages = {94-112},
+	doi = {10.1016/j.jsc.2013.09.003},
+	publisher={Elsevier}
 }
 
 @article{Goldreich1991,
-	author = {Goldreich, Oded and Micali, Silvio and Wigderson, Avi},
-	title = {Proofs That Yield Nothing but Their Validity or All Languages in NP Have Zero-knowledge Proof Systems},
-	journal = {J. ACM},
-	issue_date = {July 1991},
-	volume = {38},
-	number = {3},
-	month = jul,
+	author = {Goldreich, Oded 
+	and Micali, Silvio 
+	and Wigderson, Avi},
+	title = {{Proofs That Yield Nothing but Their Validity or All Languages in NP Have Zero-knowledge Proof Systems}},
 	year = {1991},
-	issn = {0004-5411},
-	pages = {690--728},
-	numpages = {39},
-	url = {http://doi.acm.org/10.1145/116825.116852},
+	journal = {J. ACM},
+	pages = {690-728},
 	doi = {10.1145/116825.116852},
-	acmid = {116852},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-	keywords = {NP, cryptographic protocols, fault tolerant distributed computing, graph isomorphism, interactive proofs, methodological design of protocols, one-way functions, proof systems, zero-knowledge},
-} 
-
-@Inbook{Arvind2015,
-	author="Arvind, V.
-	and K{\"o}bler, Johannes
-	and Rattan, Gaurav
-	and Verbitsky, Oleg",
-	editor="Kosowski, Adrian
-	and Walukiewicz, Igor",
-	title="On the Power of Color Refinement",
-	bookTitle="Fundamentals of Computation Theory: 20th International Symposium, FCT 2015, Gda{\'{n}}sk, Poland, August 17-19, 2015, Proceedings",
-	year="2015",
-	publisher="Springer International Publishing",
-	address="Cham",
-	pages="339--350",
-	isbn="978-3-319-22177-9",
-	doi="10.1007/978-3-319-22177-9_26",
-	url="https://doi.org/10.1007/978-3-319-22177-9_26"
+	publisher = {ACM}
 }
 
 @article{CARDON198285,
-	title = "Partitioning a graph in O(|A|log2|V|)",
-	journal = "Theoretical Computer Science",
-	volume = "19",
-	number = "1",
-	pages = "85 - 98",
-	year = "1982",
-	issn = "0304-3975",
-	doi = "https://doi.org/10.1016/0304-3975(82)90016-0",
-	url = "http://www.sciencedirect.com/science/article/pii/0304397582900160",
-	author = "A. Cardon and M. Crochemore"
+	author = {Cardon, A.
+	and Crochemore, M.},
+	title = {{Partitioning a Graph in $O(|A|log2|V|)$}},
+	year = {1982},
+	journal = {Theoretical Computer Science},
+	pages = {85-98},
+	doi = {10.1016/0304-3975(82)90016-0},
+	publisher={Elsevier}
 }
 
 @article{Laszlo1980,
-	author = {László Babai and Paul Erdős and Stanley M. Selkow},
-	title = {Random Graph Isomorphism},
-	journal = {SIAM Journal on Computing},
-	volume = {9},
-	number = {3},
-	pages = {628-635},
+	author = {Babai, László 
+	and Erdős, Paul 
+	and Selkow, Stanley M.},
+	title = {{Random Graph Isomorphism}},
 	year = {1980},
+	journal = {SIAM Journal on Computing},
+	pages = {628-635},
 	doi = {10.1137/0209047},
-	URL = {https://doi.org/10.1137/0209047},
-	eprint = {https://doi.org/10.1137/0209047}
+	publisher = {Society for Industrial and Applied Mathematics}
 }
 
 @article{johnson1975simple,
-	title={Simple separable graphs},
-	author={Johnson, RH},
-	journal={Pacific Journal of Mathematics},
-	volume={56},
-	number={1},
-	pages={143--158},
+	author={Johnson, R. H.},
+	title={{Simple Separable Graphs}},
 	year={1975},
+	journal={Pacific Journal of Mathematics},
+	pages={143-158},
 	publisher={Mathematical Sciences Publishers}
 }
 
 @article{koren1976pairs,
-	title={Pairs of sequences with a unique realization by bipartite graphs},
 	author={Koren, Michael},
-	journal={Journal of Combinatorial Theory, Series B},
-	volume={21},
-	number={3},
-	pages={224--234},
+	title={{Pairs of Sequences with a Unique Realization by Bipartite Graphs}},
 	year={1976},
-	publisher={Elsevier}
+	journal={Journal of Combinatorial Theory, Series B},
+	pages={224-234},
+	publisher={Elsevier},
+	doi = {10.1016/S0095-8956(76)80006-8}
 }
